added page for displaying room number, added post mapping, script for sending post request (to create a room and retrieve the room ID)

--- a/src/main/resources/static/startpage.html
+++ b/src/main/resources/static/startpage.html
@@ -47,24 +47,12 @@
 <body>
 <div class="container">
     <h1>Welcome to Online Mafia</h1>
-    <button onclick="createRoom()">Create Room</button>
+    <!-- Redirect to the create-room page when clicking the "Create Room" button -->
+    <a href="/create-room"><button>Create Room</button></a>
     <button onclick="joinRoom()">Join Room</button>
 </div>
 <footer>
     &copy; 2024 Online Mafia | All rights reserved
 </footer>
-
-<script>
-    function createRoom() {
-    // Redirect to the
-        // Redirect to the create room page
-        window.location.href = "create_room.html";
-    }
-
-    function joinRoom() {
-        // Redirect to the join room page
-        window.location.href = "join_room.html";
-    }
-</script>
 </body>
 </html>
